# gazebo_procedural_world_generation

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
config/: world_params.yaml
examples/: generate gazebo map.py  generate gazebo world.py  generate grid with tiling.py  test.py
src/gazebo_procedural_world_generation/: __init__.py  filling.py  grid.py  tiling.py  utils.py  world.py
src/gazebo_procedural_world_generation/config/: world_params.yaml
src/gazebo_procedural_world_generation/models/big_pillar/: model.config  model.sdf  obstacle_config.yaml
src/gazebo_procedural_world_generation/models/box/: obstacle_config.yaml
src/gazebo_procedural_world_generation/models/pillar/: model.config  model.sdf  obstacle_config.yaml
src/gazebo_procedural_world_generation/models/stacked_boxes/: model.config  model.sdf  obstacle_config.yaml
src/gazebo_procedural_world_generation/models/stacked_boxes/meshes/: boxes.dae  euro_pallet.dae  euro_pallet_w_stacked_boxes.dae
src/gazebo_procedural_world_generation/scripts/: filling_algorithms.py  utils_grid.py  utils_tiling.py  utils_world.py
tests/: test.py
