[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gazebo_procedural_world_generation"
version = "0.0.1"
authors = [
  { name="Porée Rémi", email="remi.poree.pro@protonmail.com" },
]
description = "A package providing tools for procedural generation of gazebo worlds"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[project.optional-dependencies]
gui = [
    "numpy>= 1.24.0",
    "matplotlib>=3.5.1",
    "exact_cover>=1.5.0",
    "noise>=1.2.2",
    "more-itertools>=8.10.0",
    "pathlib>=1.0.1",
    # "pytest>=6.2.5",
    # "pytest-cov>=3.0.0",
]